Got eventName's working as divs, overlapping still needs to be fixed

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {padding:0; margin:0; background-color:#FFFFFF; font-size: 1em;}
-svg {display: block; position: fixed;}
+svg {display: block; position: absolute;}
 
 /* clock */
 .monthLabel {
@@ -15,6 +15,11 @@ svg {display: block; position: fixed;}
 .eventName {
 	font-family: 'Open Sans',sans-serif;
 	font-weight: 400;
+}
+.eventPopup {
+	width: 180px;
+	height: 22px;
+	background-color: red;
 }
 
 /* 'add event' form */
